// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalsList /> <TestProposalsList /> should render correctly with images 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <div
    className="sc-bcXGCL fQDbQl"
    id="proposals-list"
  >
    <div>
      <div
        data-testid="AnimatePresence"
      >
        <div
          className="motion-map"
          style={
            Object {
              "height": "auto",
              "marginBottom": "1.7rem",
              "opacity": 1,
            }
          }
        >
          <div
            className="sc-bcXGCL fCAVet"
            id="proposal-<Proposal-mock-id-2>"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="sc-bcXGCL eyWpBS"
            >
              <div
                className="sc-bcXGCL eOutYx"
              >
                <div
                  className="sc-bcXGCL lfKjRi"
                >
                  <div
                    className="sc-bcXGCL jyyaxB"
                  >
                    <svg
                      className="sc-bcXGCL sc-eJDTud eIOCew knzWyK cap-icon"
                      fill="none"
                      viewBox="0 0 13 14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clipRule="evenodd"
                        d="M3.75 3.261a2.75 2.75 0 105.5 0 2.75 2.75 0 00-5.5 0z"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                      <path
                        d="M1 12.611a5.5 5.5 0 0111 0"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                    </svg>
                    <p
                      className="sc-bcXGCL uILGZ cap-text"
                    >
                      &lt;mock-value-for-field-"displayName"&gt;
                    </p>
                  </div>
                </div>
                <a
                  href="/project///<mock-value-for-field-\\"slug\\">"
                  onClick={[Function]}
                >
                  <h4
                    className="sc-bcXGCL irwbFD cap-heading"
                  >
                    &lt;mock-value-for-field-"title"&gt;
                  </h4>
                </a>
              </div>
              <a
                href="/project///<mock-value-for-field-\\"slug\\">"
                onClick={[Function]}
              >
                <p
                  className="sc-bcXGCL fibrtz"
                />
              </a>
              <div
                className="sc-bcXGCL kkoFlw"
              >
                <div
                  className="sc-bcXGCL jLrvNs"
                >
                  <div
                    className="sc-bcXGCL fubYpp"
                  >
                    <div
                      className="sc-bcXGCL jGtPQE"
                    >
                      <div
                        className="sc-bcXGCL ixfmfF"
                      >
                        <svg
                          className="sc-bcXGCL sc-eJDTud ehWZyF cpMilg cap-icon"
                          fill="none"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19.439 6.75c0 4.56-3.355 8.25-7.5 8.25s-7.5-3.69-7.5-8.25A8.689 8.689 0 016.157 1.5H17.72a8.69 8.69 0 011.718 5.25z"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M18.621 3h2.317a1.5 1.5 0 011.5 1.5v2.581c0 2.86-1.269 5.323-4.073 5.884l-1.922.384M5.255 3H2.938a1.5 1.5 0 00-1.5 1.5v2.581c0 2.86 1.27 5.323 4.073 5.884l1.922.384M8.188 22.5h7.5M8.188 22.5a3.75 3.75 0 017.5 0M11.938 15v3.75"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                        </svg>
                        <div
                          className="sc-bcXGCL eoNVtj"
                        >
                          <span>
                            &lt;mock-value-for-field-"totalPointsCount"&gt;&lt;mock-value-for-field-"paperVotesTotalPointsCount"&gt;
                          </span>
                          <span
                            className="sc-bcXGCL jdetxP"
                          >
                            pts
                          </span>
                        </div>
                      </div>
                      <div
                        className="sc-bcXGCL ixfmfF"
                      >
                        <svg
                          className="sc-bcXGCL sc-eJDTud ehWZyF cpMilg cap-icon"
                          fill="none"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.872 6.933c3.277 0 5.933-1.328 5.933-2.966C12.805 2.328 10.15 1 6.872 1 3.595 1 .938 2.328.938 3.967c0 1.638 2.657 2.966 5.934 2.966zM12.806 7.922V3.967"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M.938 3.967V18.8c0 1.642 2.66 2.967 5.934 2.967.56.002 1.118-.038 1.671-.119"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M.938 15.092c0 1.641 2.66 2.966 5.934 2.966a11.86 11.86 0 001.71-.128M.938 11.383c0 1.641 2.66 2.967 5.934 2.967.56.002 1.118-.038 1.671-.12M.938 7.675c0 1.641 2.66 2.967 5.934 2.967a11.86 11.86 0 001.71-.13M17.258 16.08c3.277 0 5.933-1.328 5.933-2.967 0-1.638-2.656-2.966-5.933-2.966-3.277 0-5.934 1.328-5.934 2.966 0 1.639 2.657 2.967 5.934 2.967z"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M11.324 13.113v7.17c0 1.641 2.66 2.966 5.934 2.966 3.273 0 5.933-1.325 5.933-2.966v-7.17"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M23.191 16.574c0 1.642-2.66 2.967-5.933 2.967-3.274 0-5.934-1.325-5.934-2.967"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                        </svg>
                        <div
                          className="sc-bcXGCL jbJBNL"
                        >
                          &lt;mock-value-for-field-"estimation"&gt;€
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="sc-bcXGCL ixfmfF"
                  >
                    <svg
                      className="sc-bcXGCL sc-eJDTud ehWZyF cpMilg cap-icon"
                      fill="none"
                      viewBox="0 0 14 13"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 .511c-3.314 0-6 2.22-6 4.957a4.559 4.559 0 001.774 3.517L1.522 11.99l3.324-1.9A7.1 7.1 0 007 10.424c3.314 0 6-2.219 6-4.956C13 2.73 10.314.51 7 .51z"
                        fill="#fff"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                    </svg>
                    <div
                      className="sc-bcXGCL jbJBNL"
                    >
                      &lt;mock-value-for-field-"totalCount"&gt;
                    </div>
                  </div>
                  <div
                    className="sc-bcXGCL ixfmfF"
                  >
                    <svg
                      className="sc-bcXGCL sc-eJDTud gNIYbS cpMilg cap-icon"
                      fill="none"
                      viewBox="0 0 32 29"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M31.067 4.945a8.993 8.993 0 00-2.637-3.199A8.604 8.604 0 0024.683.123a8.474 8.474 0 00-4.051.301 8.707 8.707 0 00-3.485 2.16l-1.146 1.077-1.107-1.049A8.657 8.657 0 0011.391.42 8.422 8.422 0 007.308.127a8.444 8.444 0 00-3.752 1.608 8.832 8.832 0 00-2.622 3.21 9.081 9.081 0 00-.824 5.423 8.916 8.916 0 002.438 4.875L15.04 28.578c.124.133.273.24.438.312a1.294 1.294 0 001.482-.312L29.44 15.27a8.943 8.943 0 002.448-4.886 9.11 9.11 0 00-.822-5.44z"
                        fill="currentColor"
                      />
                    </svg>
                    <div
                      className="sc-bcXGCL jbJBNL"
                    >
                      1
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <a
              href="/project///<mock-value-for-field-\\"slug\\">"
              onClick={[Function]}
            >
              <div
                className="sc-bcXGCL hGzElH"
              >
                <div
                  className="sc-bcXGCL zYWLv"
                >
                  <div
                    className="sc-bcXGCL fWqYuh sc-fXqqsB gHWJqw cap-tag"
                    title="<mock-value-for-field-\\"name\\">"
                  >
                    &lt;mock-value-for-field-"name"&gt;
                  </div>
                  <img
                    alt="<mock-value-for-field-\\"name\\">"
                    className="sc-bcXGCL kolUOV"
                    src="<mock-value-for-field-\\"url\\">"
                    style={
                      Object {
                        "aspectRatio": "3 / 2",
                        "objectFit": "cover",
                        "overflow": "hidden",
                      }
                    }
                  />
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<ProposalsList /> <TestProposalsList /> should render correctly without images 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <div
    className="sc-bcXGCL fQDbQl"
    id="proposals-list"
  >
    <div>
      <div
        data-testid="AnimatePresence"
      >
        <div
          className="motion-map"
          style={
            Object {
              "height": "auto",
              "marginBottom": "1.7rem",
              "opacity": 1,
            }
          }
        >
          <div
            className="sc-bcXGCL eUisXR"
            id="proposal-<Proposal-mock-id-2>"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="sc-bcXGCL eyWpBS"
            >
              <div
                className="sc-bcXGCL eOutYx"
              >
                <div
                  className="sc-bcXGCL lfKjRi"
                >
                  <div
                    className="sc-bcXGCL jyyaxB"
                  >
                    <svg
                      className="sc-bcXGCL sc-eJDTud eIOCew knzWyK cap-icon"
                      fill="none"
                      viewBox="0 0 13 14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clipRule="evenodd"
                        d="M3.75 3.261a2.75 2.75 0 105.5 0 2.75 2.75 0 00-5.5 0z"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                      <path
                        d="M1 12.611a5.5 5.5 0 0111 0"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                    </svg>
                    <p
                      className="sc-bcXGCL uILGZ cap-text"
                    >
                      &lt;mock-value-for-field-"displayName"&gt;
                    </p>
                  </div>
                </div>
                <a
                  href="/project///<mock-value-for-field-\\"slug\\">"
                  onClick={[Function]}
                >
                  <h4
                    className="sc-bcXGCL irwbFD cap-heading"
                  >
                    &lt;mock-value-for-field-"title"&gt;
                  </h4>
                </a>
              </div>
              <a
                href="/project///<mock-value-for-field-\\"slug\\">"
                onClick={[Function]}
              >
                <p
                  className="sc-bcXGCL fibrtz"
                />
              </a>
              <div
                className="sc-bcXGCL kkoFlw"
              >
                <div
                  className="sc-bcXGCL jLrvNs"
                >
                  <div
                    className="sc-bcXGCL fubYpp"
                  >
                    <div
                      className="sc-bcXGCL jGtPQE"
                    >
                      <div
                        className="sc-bcXGCL ixfmfF"
                      >
                        <svg
                          className="sc-bcXGCL sc-eJDTud ehWZyF cpMilg cap-icon"
                          fill="none"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19.439 6.75c0 4.56-3.355 8.25-7.5 8.25s-7.5-3.69-7.5-8.25A8.689 8.689 0 016.157 1.5H17.72a8.69 8.69 0 011.718 5.25z"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M18.621 3h2.317a1.5 1.5 0 011.5 1.5v2.581c0 2.86-1.269 5.323-4.073 5.884l-1.922.384M5.255 3H2.938a1.5 1.5 0 00-1.5 1.5v2.581c0 2.86 1.27 5.323 4.073 5.884l1.922.384M8.188 22.5h7.5M8.188 22.5a3.75 3.75 0 017.5 0M11.938 15v3.75"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                        </svg>
                        <div
                          className="sc-bcXGCL eoNVtj"
                        >
                          <span>
                            &lt;mock-value-for-field-"totalPointsCount"&gt;&lt;mock-value-for-field-"paperVotesTotalPointsCount"&gt;
                          </span>
                          <span
                            className="sc-bcXGCL jdetxP"
                          >
                            pts
                          </span>
                        </div>
                      </div>
                      <div
                        className="sc-bcXGCL ixfmfF"
                      >
                        <svg
                          className="sc-bcXGCL sc-eJDTud ehWZyF cpMilg cap-icon"
                          fill="none"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.872 6.933c3.277 0 5.933-1.328 5.933-2.966C12.805 2.328 10.15 1 6.872 1 3.595 1 .938 2.328.938 3.967c0 1.638 2.657 2.966 5.934 2.966zM12.806 7.922V3.967"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M.938 3.967V18.8c0 1.642 2.66 2.967 5.934 2.967.56.002 1.118-.038 1.671-.119"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M.938 15.092c0 1.641 2.66 2.966 5.934 2.966a11.86 11.86 0 001.71-.128M.938 11.383c0 1.641 2.66 2.967 5.934 2.967.56.002 1.118-.038 1.671-.12M.938 7.675c0 1.641 2.66 2.967 5.934 2.967a11.86 11.86 0 001.71-.13M17.258 16.08c3.277 0 5.933-1.328 5.933-2.967 0-1.638-2.656-2.966-5.933-2.966-3.277 0-5.934 1.328-5.934 2.966 0 1.639 2.657 2.967 5.934 2.967z"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M11.324 13.113v7.17c0 1.641 2.66 2.966 5.934 2.966 3.273 0 5.933-1.325 5.933-2.966v-7.17"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M23.191 16.574c0 1.642-2.66 2.967-5.933 2.967-3.274 0-5.934-1.325-5.934-2.967"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                        </svg>
                        <div
                          className="sc-bcXGCL jbJBNL"
                        >
                          &lt;mock-value-for-field-"estimation"&gt;€
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="sc-bcXGCL ixfmfF"
                  >
                    <svg
                      className="sc-bcXGCL sc-eJDTud ehWZyF cpMilg cap-icon"
                      fill="none"
                      viewBox="0 0 14 13"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 .511c-3.314 0-6 2.22-6 4.957a4.559 4.559 0 001.774 3.517L1.522 11.99l3.324-1.9A7.1 7.1 0 007 10.424c3.314 0 6-2.219 6-4.956C13 2.73 10.314.51 7 .51z"
                        fill="#fff"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                    </svg>
                    <div
                      className="sc-bcXGCL jbJBNL"
                    >
                      &lt;mock-value-for-field-"totalCount"&gt;
                    </div>
                  </div>
                  <div
                    className="sc-bcXGCL ixfmfF"
                  >
                    <svg
                      className="sc-bcXGCL sc-eJDTud gNIYbS cpMilg cap-icon"
                      fill="none"
                      viewBox="0 0 32 29"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M31.067 4.945a8.993 8.993 0 00-2.637-3.199A8.604 8.604 0 0024.683.123a8.474 8.474 0 00-4.051.301 8.707 8.707 0 00-3.485 2.16l-1.146 1.077-1.107-1.049A8.657 8.657 0 0011.391.42 8.422 8.422 0 007.308.127a8.444 8.444 0 00-3.752 1.608 8.832 8.832 0 00-2.622 3.21 9.081 9.081 0 00-.824 5.423 8.916 8.916 0 002.438 4.875L15.04 28.578c.124.133.273.24.438.312a1.294 1.294 0 001.482-.312L29.44 15.27a8.943 8.943 0 002.448-4.886 9.11 9.11 0 00-.822-5.44z"
                        fill="currentColor"
                      />
                    </svg>
                    <div
                      className="sc-bcXGCL jbJBNL"
                    >
                      1
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
